--- a/trunk/archivos_adicionales/portal-ext.properties
+++ b/trunk/archivos_adicionales/portal-ext.properties
@@ -3,7 +3,10 @@ jdbc.default.url=jdbc:mysql://192.168.1.219/lifearyga3_lportal?useUnicode=true&c
 jdbc.default.username=root
 jdbc.default.password=root
 
-
+jdbc.test.driverClassName=com.mysql.jdbc.Driver
+jdbc.test.url=jdbc:mysql://192.168.1.219/testliferay?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
+jdbc.test.username=root
+jdbc.test.password=root
 
 ##
 ##application.startup.events=com.my.actions.MyStartupAction
