--- a/demos/liferay-portlets/SpringDemo-portlet/docroot/WEB-INF/web.xml
+++ b/demos/liferay-portlets/SpringDemo-portlet/docroot/WEB-INF/web.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>SpringDemo-portlet</display-name>
-
+<context-param>  
+         <param-name>contextConfigLocation</param-name>  
+         <param-value>/WEB-INF/context/rootcontext.xml</param-value>  
+     </context-param>  
+   
+     <!-- Listener de Contexto -->  
+     <listener>  
+         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
+     </listener>
 	 <servlet>
   	<servlet-name>view-servlet</servlet-name>
   	<servlet-class>org.springframework.web.servlet.ViewRendererServlet</servlet-class>
