--- a/demos/liferay-portlets/SpringCapaDatosDemo-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/demos/liferay-portlets/SpringCapaDatosDemo-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -19,13 +19,15 @@ portal-dependency-jars=\
     spring-beans.jar,\
     spring-asm.jar,\
     spring-aop.jar,\
+    spring-orm.jar,\
+    spring-context-support.jar,\
     commons-beanutils.jar,\
     commons-collections.jar,\
     commons-fileupload.jar,\
     commons-io.jar,\
     commons-lang.jar,\
     jstl-api.jar,\
-    spring-context-support.jar,\
-    jstl-impl.jar
+    jstl-impl.jar,\
+    aopalliance.jar
 long-description=
 liferay-versions=6.1.1+
