--- a/trunk/utilitarios/conexion_db/CapaDatosTest/pom.xml
+++ b/trunk/utilitarios/conexion_db/CapaDatosTest/pom.xml
@@ -3,7 +3,7 @@ xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>CapaDatosTest</groupId>
+  <groupId>com.vst.capa.datos</groupId>
   <artifactId>CapaDatosTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>CapaDatosTest</name>
@@ -91,6 +91,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 <!--             <version>${gson.version}</version> -->
 <!--         </dependency> -->
   </dependencies>
+    
+  
   <build>
         <plugins>
             <plugin>
@@ -107,6 +109,25 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
                     <downloadJavadocs>true</downloadJavadocs>
                 </configuration>
             </plugin>
+            
+            <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+         <configuration>
+          	<skip>true</skip>
+       			 <outputDirectory>C:\Liferayga3\liferay-portal-tomcat\liferay-portal-6.1.2-ce-ga3\tomcat-7.0.40\lib\ext\</outputDirectory>
+      		</configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>           
+          </execution>
+        </executions>
+      </plugin>
+            
 <!--             <plugin> -->
 <!--                 <groupId>org.apache.maven.plugins</groupId> -->
 <!--                 <artifactId>maven-compiler-plugin</artifactId> -->
