--- a/trunk/utilitarios/conexion_db/CapaDatosTest/pom.xml
+++ b/trunk/utilitarios/conexion_db/CapaDatosTest/pom.xml
@@ -116,7 +116,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <version>2.4</version>
          <configuration>
           	<skip>true</skip>
+<!--        			 <outputDirectory>C:\Liferayga3\liferay-portal-tomcat\liferay-portal-6.1.2-ce-ga3\tomcat-7.0.40\lib\ext\</outputDirectory> -->
        			 <outputDirectory>C:\Liferayga3\liferay-portal-tomcat\liferay-portal-6.1.2-ce-ga3\tomcat-7.0.40\lib\ext\</outputDirectory>
+<!--        			 C:\Users\ddelgado\Documents\workspace-liferay-demo\CapaDatosTest -->
       		</configuration>
         <executions>
           <execution>
