--- a/demos/liferay-portlets/SpringDemo-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/demos/liferay-portlets/SpringDemo-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -26,6 +26,8 @@ portal-dependency-jars=\
     commons-lang.jar,\
     jstl-api.jar,\
     spring-context-support.jar,\
-    jstl-impl.jar
+    jstl-impl.jar,\
+    CapaDatosTest-0.0.1-SNAPSHOT.jar
+required-deployment-contexts=Portal-Hook-hook
 long-description=
 liferay-versions=6.1.1+
