--- a/demos/liferay-portlets/SpringDemo-portlet/build.xml
+++ b/demos/liferay-portlets/SpringDemo-portlet/build.xml
@@ -2,5 +2,5 @@
 <!DOCTYPE project>
 
 <project name="SpringDemo-portlet" basedir="." default="deploy">
-	<import file="/home/crossfire/Documentos/liferay/liferay-plugins-sdk-6.1.1/portlets/build-common-portlet.xml" />
+	<import file="../build-common-portlet.xml" />
 </project>
