--- a/utilitarios/conexion_db/CapaDatosTest/src/main/resources/config.properties
+++ b/utilitarios/conexion_db/CapaDatosTest/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-##1 es con jdni y 0 sin jdni para los test
-conectar.jdni.database=0
+##1es con jdni y 0 con la configuracion en hardcode
+persistence.jndi.conextion=1
 persistence.name=hsd_chat
