--- a/trunk/utilitarios/conexion_db/CapaDatosTest/src/main/resources/config.properties
+++ b/trunk/utilitarios/conexion_db/CapaDatosTest/src/main/resources/config.properties
@@ -1,3 +1,8 @@
 ##1es con jdni y 0 con la configuracion en hardcode
 persistence.jndi.conextion=1
 persistence.name=hsd_chat
+
+javax.persistence.jdbc.driver=com.mysql.jdbc.Driver
+javax.persistence.jdbc.url=jdbc:mysql://192.168.1.219:3306/chathsd
+javax.persistence.jdbc.user=root
+javax.persistence.jdbc.password=root
