--- a/trunk/demos/liferay-portlets/first-spring-mvc-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/trunk/demos/liferay-portlets/first-spring-mvc-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -26,4 +26,5 @@ portal-dependency-jars=\
     commons-lang.jar,\
     jstl-api.jar,\
     spring-context-support.jar,\
-    jstl-impl.jar
+    jstl-impl.jar,\
+    CapaDatosTest-0.0.1-SNAPSHOT.jar
