--- a/demos_empresa/gtelcom/liferay-layouts/columns-1-3-layouttpl/build.xml
+++ b/demos_empresa/gtelcom/liferay-layouts/columns-1-3-layouttpl/build.xml
@@ -4,5 +4,5 @@
 <project name="columns-1-3-layouttpl" basedir="." default="deploy">
 	<property name="plugin.version" value="1" />
 
-	<import file="C:\Liferay_ga3\liferay-plugins-sdk-6.1.1\layouttpl/build-common-layouttpl.xml" />
+	<import file="../build-common-layouttpl.xml" />
 </project>
